--- a/css/style.css
+++ b/css/style.css
@@ -7,5 +7,10 @@
 body{
     font-size: 20px;
     font-family: sans-serif;
+    background-color: rgb(167, 175, 175);
 }
 
+
+.input-group,.btn-primary{
+    margin-top: 20px;
+}
